# GynTree

./: .coveragerc  .flake8  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  changelog.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  enhancement.md  feature_request.md
.github/workflows/: ci.yml  documentation.yml  quality.yml  release.yml  testing.yml
api/overview/: index.html
assets/docs/: CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  api_reference.md  configuration.md  faq.md  user_guide.md
changelog/: index.html
code_of_conduct/: index.html
config/: exclusion_settings.json
config/projects/: GynTree.json
contributing/guidelines/: index.html
contributing/issue_templates/: index.html
docs/: code_of_conduct.md  index.md  privacy.md
docs/getting-started/: faq.md  (+1 more)
privacy/: index.html
scripts/: build_executable.py  check_docs.py  run_qc.py  setup_dev.py  update_requirements.bat
search/: search_index.json
src/: App.py
tests/: ci_config.json  conftest.py  github_ci_config.json  run_tests.py  runner_utils.py  runners.py  test_auto_exclude_manager.py  test_comment_parser.py  test_config.json  test_directory_analyzer.py  test_directory_analyzer_memory.py  test_exclusion_aggregator.py  test_project_context.py  test_project_manager.py  test_project_type_detector.py  test_runner_utils.py  test_runners.py  test_settings_manager.py
(+92 files in other folders)
